--- a/Midterm_project/midterm - PT-C and Islands.ipynb
+++ b/Midterm_project/midterm - PT-C and Islands.ipynb
@@ -26,7 +26,6 @@
     "\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -1257,9 +1256,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fitting models: 100%|████████████████████████████████████████████████████████████████████| 7/7 [00:03<00:00,  2.28it/s]\n",
-      "Fitting models: 100%|████████████████████████████████████████████████████████████████████| 7/7 [00:05<00:00,  1.23it/s]\n",
-      "INFO:hts.core.regressor:Reconciling forecasts using <hts.revision.RevisionMethod object at 0x000001FAC4609220>\n"
+      "Fitting models: 100%|████████████████████████████████████████████████████████████████████| 7/7 [00:02<00:00,  2.74it/s]\n",
+      "Fitting models: 100%|████████████████████████████████████████████████████████████████████| 7/7 [00:05<00:00,  1.21it/s]\n",
+      "INFO:hts.core.regressor:Reconciling forecasts using <hts.revision.RevisionMethod object at 0x00000255B6EC3280>\n"
      ]
     }
    ],
@@ -1451,9 +1450,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fitting models: 100%|████████████████████████████████████████████████████████████████████| 7/7 [00:01<00:00,  6.81it/s]\n",
-      "Fitting models: 100%|███████████████████████████████████████████████████████████████████| 7/7 [00:00<00:00, 291.60it/s]\n",
-      "INFO:hts.core.regressor:Reconciling forecasts using <hts.revision.RevisionMethod object at 0x000001FAC3E168B0>\n"
+      "Fitting models: 100%|████████████████████████████████████████████████████████████████████| 7/7 [00:01<00:00,  6.68it/s]\n",
+      "Fitting models: 100%|███████████████████████████████████████████████████████████████████| 7/7 [00:00<00:00, 279.85it/s]\n",
+      "INFO:hts.core.regressor:Reconciling forecasts using <hts.revision.RevisionMethod object at 0x00000255B83B9190>\n"
      ]
     }
    ],
@@ -1631,6 +1630,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "78b8b13b-6c43-45bf-9ec7-5cda7d09903b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "464dbc97-f691-469c-b76d-3246b6eedaba",
    "metadata": {},
    "outputs": [],
    "source": []
